--- a/TODO
+++ b/TODO
@@ -18,8 +18,43 @@
 - Bug-ish: when marking a feed as inactive, get redirected back to it.
   This is bogus.
 	Redirect to feed index.
+- Do I really need Smarty? I'm not sure it's doing anything it
+  wouldn't be just as easy to do in PHP.
+- High Performance JS book:
+  - Move <script> tags to the bottom of <body>: loading scripts blocks,
+    so this at least shows HTML to the user while the JS loads.
+  - Use <script defer> when possible.
+	What qualifies as "not modifying the DOM"?
+  - Loading JS-specific CSS, and loading additional scripts from JS: p.7
+	<script type="text/javascript">
+	var stylesheet = document.createElement("link");
+	stylesheet.rel = "stylesheet";
+	stylesheet.type = "text/css";
+	stylesheet.media = "all";
+	stylesheet.href="skins/{$skin}/style-js.css";
+	document.getElementsByTagName("head")[0].appendChild(stylesheet);
+	</script>
+    This can be put at the end.
+  - Profiling and debugging should be per-page options. These can be
+    turned on on a per-page basis or something, and the requisite
+    scripts loaded dynamically, to speed things up in the normal case
+    (pp. 7-9).
+  - If JS gets complicated, could use an Emacs-like autoload scheme:
+    define an array of functions such that, if they're ever called,
+    load the requisite JS script, then call the original function.
+	Can use the same introspection techniques as the profiler.
+- Can Rhino be used to check JS syntax and whatnot?
+  https://developer.mozilla.org/en/Rhino
+	What about profiling?
 - Firefox 2 (carrot) doesn't have getElementsByClassName.
-	Do I care?
+	Do I care? Maybe a bit.
+- Is it really worth keeping JS-specific stylesheets?
+- Is there a way to tell Smarty to build all the relevant compiled
+  templates in 'make'?
+	Presumably a command-line PHP script can do this:
+	foreach skin
+		foreach *.tpl
+			Smarty->compile($skin/$file) or something
 - Try compressing JS/CSS/etc. to save bandwidth
   - Figure out how to do this with Apache
   - 'make install' needs to compress files
@@ -562,8 +597,6 @@
 	In order to be allowed to delete itself, the script should be
   put in a directory that the httpd user can write to: the Smarty
   compile directory. Yes, this is a hack.
-- Remove the smarty/{config,templates_c} out of the distro.
-  Probably should remove them altogether.
 - Run timing tests with different numbers of feeds. See if there's a
   way to estimate a good number of parallel connections.
 	If there is, allow user to set $PARALLEL_UPDATES to "auto",
@@ -576,8 +609,6 @@
 	Note that the Storage interface only allows storing and
   retrieving strings, so data structures must be JSONified before
   storage.
-- On iPad, might be nice to have "Mark as read" control on the left,
-  for one-handed reading.
 - Is there a way to normalize HTML? If the <![CDATA[...]]> section in
   a feed contains mismatched tags, e.g.
 	<p><a ...><img/></p>
@@ -657,8 +688,8 @@
   themselves handheld devices. Go figure.
 - CSS media queries described at
   http://www.w3.org/TR/2002/CR-css3-mediaqueries-20020708/
-- iPhone/iPad: might be fun to set a background gradient that changes
-  over the course of a day.
+- Might be fun to set a background that changes over the course of a
+  day.
 - Add a customized error page for when can't authenticate?
 	ErrorDocument /path/to/page.html
   in .htaccess
