Moved all of the hooks out of lib/parse-feed.inc and htdocs/view.php, and into their own plugins. defeedburn()ination now happens when the RSS feed is parsed, not when the items are displayed.

--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 - Convert $element_hooks stuff in parse-feed.inc to actual hooks.
+- Hook to strip iframe in Popdose.
 - Add hook for links to mobile versions of URLs (view.php).
 	Probably should add a subdirectory underneath "plugins".
 - Bug?: There are some old articles in the database. Why aren't they
