--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
-- Convert $element_hooks stuff in parse-feed.inc to actual hooks.
-- Hook to strip iframe in Popdose.
+- Security: Remote code execution in Smarty < 2.6.23
+  Message-ID: <20100602231815.4a5db514@mail.a3li.li>
 - Add hook for links to mobile versions of URLs (view.php).
 	Probably should add a subdirectory underneath "plugins".
 - Bug?: There are some old articles in the database. Why aren't they
@@ -743,6 +743,7 @@
 	Status bar appearance:
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   Can set to "default", "black", or "black-translucent".
+	I think this only works on full-on mobile apps, though.
 - Storing data on iPhone:
   http://developer.apple.com/safari/library/documentation/AppleApplications/Reference/SafariWebContent/Client-SideStorage/Client-SideStorage.html
   Can also set up a manifest file, so that the app will download
